fix scrollbar issue

--- a/public/styles.css
+++ b/public/styles.css
@@ -62,6 +62,10 @@ html {
     justify-content: center;
 }
 
+#center {
+    scrollbar-width: none;
+}
+
 .grow {
     flex-grow: 1;
 }
